fixed collapsable function for the form and added the reset value

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -15,5 +15,12 @@
   color: $gun-metal;
 }
 
-
+.collapsable--close{
+  .collapsable__icon--right{
+    transform: rotate(180deg);
+  }
+  .collapsable__content{
+    display: none;
+  }
+}
   
